--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
+/.idea
 /node_modules
-/public/hot
-/public/storage
+/public_html/hot
+/public_html/storage
 /public_html/hot
 /public_html/storage
 /storage/*.key
