--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -37,7 +38,11 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Katzsimon\\Base\\": "_packages/katzsimon/base/src",
+            "Katzsimon\\Auth\\": "_packages/katzsimon/auth/src",
+            "Katzsimon\\Movie\\": "_packages/katzsimon/movie/src",
+            "Katzsimon\\Cinema\\": "_packages/katzsimon/cinema/src"
         }
     },
     "autoload-dev": {
