--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "browser-sync": "^2.26.14",
         "browser-sync-webpack-plugin": "^2.2.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.2.8",
+        "tailwindcss": "^2.0.3"
+    },
+    "dependencies": {
+        "sass": "^1.32.8",
+        "sass-loader": "^11.0.1"
     }
 }
