fix: Setup Larastan and fixed a few issues

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
+DEBUGBAR_ENABLED=false
+QUERY_DETECTOR_ENABLED=false
+MIX_PACKAGES_PATH=
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
