--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
         "bootstrap-vue": "^2.21.2",
         "sass": "^1.32.8",
         "sass-loader": "^11.0.1",
-        "vue": "^2.6.12"
+        "vue": "^2.6.12",
+        "vue-meta": "^2.4.0",
+        "vue-router": "^3.5.1",
+        "vuetify": "^2.4.6",
+        "vuex": "^3.6.2"
     }
 }
