chore: Adding some comments and tidying up

--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,22 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://webengineer.co.za
 
 DEBUGBAR_ENABLED=false
 QUERY_DETECTOR_ENABLED=false
-MIX_PACKAGES_PATH=
+
+MIX_APP_URL=https://webengineer.co.za
+MIX_PACKAGES_PATH="_packages/katzsimon"
+MIX_MODE=both
+
+OUTPUT_APP=vueapp
+OUTPUT_ADMIN=inertia
+
+PROTECT_ENABLED=true
+PROTECT_PASSWORD=""
+
+API_GUARD=sanctum
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
