docs and chore: Completed README Files, added additional code comments, and some general clean up

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
-APP_NAME=Laravel
+APP_NAME=Movies
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://webengineer.co.za
+APP_URL=
 
 DEBUGBAR_ENABLED=false
 QUERY_DETECTOR_ENABLED=false
 
-MIX_APP_URL=https://webengineer.co.za
+MIX_APP_URL=${APP_URL}
 MIX_PACKAGES_PATH="_packages/katzsimon"
 MIX_MODE=both
 
 OUTPUT_APP=vueapp
 OUTPUT_ADMIN=inertia
 
-PROTECT_ENABLED=true
+PROTECT_ENABLED=false
 PROTECT_PASSWORD=""
 
 API_GUARD=sanctum
